Gaim: The Pimpin' Penguin IM Client that's good for the soul!

version 1.5.0:
	* Ability to set IRC quit message (Lalo Martins)
	* OSCAR file transfers now work for 2 users behind the same NAT
	  (Jonathan Clark)

version 1.4.0 (7/7/2005):
	* Fix system log start times for some protocols
	* SILC compiles with newer SILC toolkit versions (Pekka Riikonen)
	* Fixed a bug where buddy icon cache files were left in the icon
	  cache directory after they were no longer in use.
	* Attempt to detect the file type of a buddy icon when saving.
	* Additional Yahoo! boot protection (Peter Lawler)
	* A few Yahoo! memory leaks plugged (Peter Lawler)
	* Fixed handling of the new Yahoo! profile page. (Joshua Honeycutt,
	  Peter Lawler)
	* Fixed localized Yahoo! room lists.  Please refer to the Yahoo!
	  section of the Gaim FAQ for details. (Peter Lawler)
	* Enabled sending files to ICQ users using ICQ 5.02 and newer
	  (Jonathan Clark)

version 1.3.1 (6/9/2005):
	* The file transfer details section now also displays the full path to
	  the local file sent/received.
	* Yahoo! has the following new "/" commands:  /join, /buzz
	* Fix Yahoo! privacy bug
	* Fix Jabber Get Info crash on busted servers
	* Updated our gaim.desktop file, thanks to all our terrific translators
	  for sending in translations of the changes
	* Improvements to how Gaim handles new message notification
	* Fix Jabber registration on XMPP servers (including jabber.org)

version 1.3.0 (5/10/2005):
	* Removed parts of the font selection dialog that were not respected
	* Fix being invited to a multi user chat on MSN
	* Multiple SILC accounts should work now (Pekka Riikonen)
	* Fix times on jabber chat backlogs
	* Fix gevolution plugin to compile with e-d-s 1.0 or 1.2
	* Fix gevolution plugin to remember buddy name when someone added you
	  and you then add them
	* Formatting in jabber chats works
	* Fix to prevent MSN disconnecting if you change status while connecting